--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,22 +1,44 @@
 
 .main{ 
- margin: 0 auto;
-    border: 2px solid orange;
-    width: 80%;
+    margin: 0 auto;
+    width:100%;
 
 }
 
 .container{ 
-    border: 2px solid rgb(59, 58, 55);
-    width: 80%;
-    margin: 0 auto;
-display: flex;
-flex-direction: row;
-justify-content: space-between;
-flex-wrap: wrap;
+    width: 100%;
+    margin: 0 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 .row{
-    border: 2px solid rgb(117, 20, 20);
-    width: 20vw;
-   height:20vw;
+    border: 2px solid rgb(84, 77, 77);
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+    box-shadow: 20px 20px 20px rgb(84, 77, 77);
+    width: 26vw;
+    height:20vw;
+ 
 }
+
+.guitar-p{
+   width: auto;
+   height: 2vw;
+   font-size: 1vw;
+   color:rgb(59, 58, 55);
+   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;ont-weight: bold;
+   margin: 1vw 1vw;
+}
+.more-btn {
+    background-color: rgb(15, 15, 14);
+    border: 1px solid gray;
+    color: whitesmoke;
+    font-size: 0.9vw;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-decoration: none;
+    border-radius: 5px;
+ }
