--- a/app/views/guitars/index.html.erb
+++ b/app/views/guitars/index.html.erb
@@ -9,9 +9,10 @@
 us$:<%= guitar.price%>
  <%= image_tag (guitar.image_url), style: 'height:11vw;width:11vw;'%>
 
-   <%= link_to "See More.." ,guitar_path(guitar.id),method: :get, class:"more-btn" %>
+   <%= link_to "See More.." ,guitar_path(guitar.id), class:"more-btn" %>
 </div>
 |<% end %>
 </div>
 </section>
+<%= link_to "Home", root_path %>
 </main>
