--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,11 +2,11 @@
 <h2> Guitars</h2>
 <div class="homecats">
 <%= image_tag "allguitars.jpg", style: 'height:15vw;width:15vw;' %>
-<%= link_to "Go", guitars_path %>
+<%= link_to "Go", instruments_path %>
 </div>
 <div>
 <%= image_tag "allbass.webp", style: 'height:15vw;width:15vw;' %>
-<%= link_to "Go", basses_path %>
+
 
 
 </div>
