--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -5,10 +5,8 @@
 <div id="carts">
   <% @carts.each do |cart| %>
     <%= render cart %>
-    <p>
-      <%= link_to "Show this cart", cart %>
-    </p>
   <% end %>
 </div>
+<%= link_to "Home", root_path %>
 
 <%= link_to "New cart", new_cart_path %>
