--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -1,27 +1,26 @@
-<div class="columns align-items-center">
-  <div class="column is-1">
+<div >
+  <div >
     <%= line_item.quantity %>
   </div>
-  <div class="column is-2">
-    <figure class="is-128x128 image">
-      <%= image_tag(line_item.instrument.image) %>
-    </figure>
+  <div >
+      <%= image_tag(line_item.instrument.image , class:'cart-img')%>
+  
   </div>
-  <div class="column is-9">
+  <div >
     <strong><%= line_item.instrument.name %></strong>
-    <div class="columns align-items-center">
-      <div class="content column is-9">
+    <div >
+      <div>
         <%= truncate(line_item.instrument.description, length: 140) %>
       </div>
-      <div class="column is-3 has-text-right">
-        <strong class="f4"><%= number_to_currency(line_item.total_price) %></strong>
+      <div >
+        <strong ><%= number_to_currency(line_item.total_price) %></strong>
       </div>
     </div>
   </div>
 </div>
 
-<div class="has-text-right">
-  <%= link_to 'Remove Item', line_item, method: :delete, data: { confirm: "Are you sure? " }, class: "button is-small mb4" %>
+<div>
+  <%= link_to 'Remove Item', line_item, method: :delete, data: { confirm: "Are you sure? " }, class: 'keep' %>
 </div>
 
 <hr/ >
