--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,4 +1,9 @@
 
+.container-main {
+    width: 100%;
+    margin: 5vw auto;
+    padding: 0;
+}
 .main{ 
     margin: 0 auto;
    
@@ -66,3 +71,111 @@
     text-decoration: none;
     border-radius: 5px;
  }
+ .navbar {
+height: 4vw;
+width: 100%;
+background-color: rgb(15, 15, 14);
+display: flex;
+color: whitesmoke;
+font-size: 1.5vw;
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+text-decoration: none;
+position: fixed;
+top: 0;
+left: 0;
+align-items: center;
+
+ }
+ .nav-items{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    list-style: none;
+  }
+  .li{
+    margin: 0 12vw;
+  }
+  .cart-card {
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+margin: 1vw 1vw;
+
+
+ }
+ .show-price {
+    font-size: 1.5vw;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bold;
+    color: rgb(59, 58, 55);
+ }
+  
+  .container-cart{
+    border: 4px solid black;
+    width: 41vw;
+    height: 43vw;
+    border: 2px solid rgb(5, 5, 5);
+    border-radius: 10px;
+    box-shadow: 20px 20px 20px rgb(5, 5, 5);
+    margin: 1.5vw 1vw;
+    padding: 1vw 3vw;
+  }
+  .show-name{ 
+    font-size: 1.5vw;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bold;
+    color: rgb(59, 58, 55);
+    margin: 1vw 1vw;
+    padding: 1vw 1vw;
+
+  }
+  .line-price{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .btn-cart {
+    background-color: rgb(224, 224, 30);
+    border: 1px solid gray;
+    color: rgb(83, 64, 64);
+    font-size: 1vw;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-decoration: none;
+    border-radius: 5px;
+    width: 6.3vw;
+    height: 2.2vw;
+    font-weight: 700;
+
+  }
+    .btn-cart:hover {
+        background-color: rgb(54, 54, 41);
+        color: rgb(228, 208, 208);
+        cursor: pointer;
+        width: 6.5vw;
+        height: 2.5vw;
+    }
+    .cart-desc {
+        font-size: 1.5vw;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        font-weight: bold;
+        color: rgb(59, 58, 55);
+        margin: 1vw 1vw;
+        padding: 1vw 1vw;
+         max-height: 20vw;
+    }
+    .carrito{
+        width: 2vw;
+        height: 1.8vw;
+        background-color: rgb(221, 164, 143);
+    
+
+    }
+    .carr {
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+      
+
+    }
