--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>MusicCenter</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -9,10 +9,14 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-    <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
+   
 
   <body>
+  <main class="container-main">
+   <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
+  <%=render 'carts/nav'%>
     <%= yield %>
+  </main>
   </body>
 </html>
